# snoops

./: .gitmodules  CMakeLists.txt  Makefile  README.md  fdsnoop.bpf.c  fdsnoop.cpp  fdsnoop.py  libsnoop.cpp  memsnoop.bpf.c  memsnoop.cpp  memsnoop.py
include/: fdsnoop.h  libsnoop.h  memsnoop.h
py-snoops/: fdsnoop.py  memsnoop.py
